# HINT-Reader

./: .gitignore  .travis.yml  README.md  _config.yml
XCode_Storyboards/HINTreader Horizontal Slice/HINTreader Horizontal Slice/: AppDelegate.swift  ViewController.swift
XCode_Storyboards/HINTreader Horizontal Slice/HINTreader Horizontal Slice.xcodeproj/: project.pbxproj
hintreader/: README.md  analysis_options.yaml  pubspec.yaml
hintreader/android/app/: build.gradle  google-services.json
hintreader/assets/: books.json
hintreader/coverage/: lcov.info
hintreader/ios/Runner/: Info.plist
hintreader/ios/Runner.xcodeproj/: project.pbxproj
hintreader/lib/: BookCard.dart  BookModel.dart  database.dart  main.dart  nasaApi.dart  nasaPicture.dart
hintreader/lib/progbar/: MyLinearProgressIndicator.dart
hintreader/lib/views/: BookView.dart  BookshelView.dart  BookshelfView.dart  BookshelfView.dart.orig  GestureWidget.dart  deleteBook.dart  insertBook.dart
hintreader/test/: widget_test.dart
opengl_texture_widget_example_HINT/: pubspec.yaml
opengl_texture_widget_example_HINT/android/: build.gradle  gradle.properties
opengl_texture_widget_example_HINT/android/src/main/cpp/: CMakeLists.txt  gl_code.cpp
opengl_texture_widget_example_HINT/example/: pubspec.yaml
opengl_texture_widget_example_HINT/example/assets/: books.json
opengl_texture_widget_example_HINT/example/lib/: BookCard.dart  database.dart  main.dart
opengl_texture_widget_example_HINT/example/lib/progbar/: ProgressBar.dart  (+1 more)
opengl_texture_widget_example_HINT/lib/: opengl_texture.dart
(+16 files in other folders)
